# hal_new_cmake

./: .gitignore  CMakeLists.txt  COPYING  version.in
src/include/: common.h  hal_file1.h  hal_file2.h  hal_file3.h  hal_types.h  libhal.h
src/lib/: CMakeLists.txt  common.c  hal_file1.c  hal_file2.c  hal_file3.c  libbom_hal.so.1  libbom_hal.so.1.0  libname_hal.so.1  libname_hal.so.1.0  main_prog  main_prog.c
src/test/: CMakeLists.txt  common_test.c  common_test.h  file1_test  file1_test.c  file1_test.h  file2_test  file2_test.c  file2_test.h
